# django-ninja-crane

./: LICENSE.md  README.md  manage.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  publish.yml
0.1.7/advanced/custom-version-resolver/: index.html
0.1.7/advanced/operation-transformers/: index.html
0.1.7/concepts/how-it-works/: index.html
0.1.7/examples/modifying-schema/: index.html
0.1.7/examples/path-rewrites/: index.html
0.1.7/get-started/quickstart/: index.html
0.1.7/search/: search_index.json
0.1.9/: 404.html  index.html  objects.inv
0.1.9/concepts/migration-files/: index.html
0.1.9/get-started/configuration/: index.html
crane/: api_version.py  delta.py  middleware.py  migrations_generator.py  openapi_version.py  transformers.py  versioned_api.py
docs/: .nav.yml  .plantuml_config.puml  index.md
docs/advanced/: custom-version-resolver.md  operation-transformers.md
docs/concepts/: how-it-works.md  migration-files.md
docs/examples/: modifying-schema.md  path-rewrites.md
docs/get-started/: configuration.md  quickstart.md
test_app/: api.py  models.py
test_app/api_migrations/: m_0001_initial_api_version.py
test_app/api_migrations/default/: m_0002_add_phone_field.py  (+4 more)
test_app/migrations/: 0001_initial.py
test_server/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_create_api_version.py  test_data_migrations.py  test_delta.py  test_integration.py  test_migrations_generator.py  test_openapi_version.py  test_path_rewriting.py  test_pydantic_jsonschema.py  test_transformers.py
